<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    >
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@android:color/white">

    </TextView>
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/trophy"
        android:contentDescription="@string/todo">

    </ImageView>
    <TextView
    android:id="@+id/tv_congratulation"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/hey_congratulation"
    android:textStyle="bold"
    android:textSize="25sp"
    android:layout_marginTop="20dp"
    android:textColor="@android:color/white">
</TextView><TextView
    android:id="@+id/tv_username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textStyle="bold"
    android:textSize="25sp"
    android:textColor="@android:color/white">


</TextView>
    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#343A43">


    </TextView>
    <Button
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/finish"
        android:textColor="@color/brown"
        >

    </Button>

</LinearLayout>