<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizQuestion"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">
        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="#363A43"
            android:textSize="22sp"
            android:text="@string/which_country_flag_is_this"
            >
        </TextView>
        <ImageView
            android:id="@+id/flagimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/australia"
            >
        </ImageView>
        <LinearLayout
            android:id="@+id/pgdetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            >
            <ProgressBar
                android:id="@+id/pgbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"
                android:minHeight="50dp"
                android:progress="0"
                android:indeterminate="false"

                />
            <TextView
                android:id="@+id/pgtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="@string/_0_10"
                android:textSize="14sp"
                >

            </TextView>

        </LinearLayout>

        <TextView
            android:id="@+id/op1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/options"
            android:textColor="#7A8089"
            android:background="@drawable/optionbg"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:padding="15dp"
            >
        </TextView>
        <TextView
            android:id="@+id/op2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/options"
            android:textColor="#7A8089"
            android:background="@drawable/optionbg"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:padding="15dp"
            >
        </TextView>
        <TextView
            android:id="@+id/op3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/options"
            android:textColor="#7A8089"
            android:background="@drawable/optionbg"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:padding="15dp"
            >
        </TextView>
        <TextView
            android:id="@+id/op4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/options"
            android:textColor="#7A8089"
            android:background="@drawable/optionbg"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:padding="15dp"
            >
        </TextView>
        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:textSize="18sp"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            >

        </Button>



    </LinearLayout>


</ScrollView>